art section, blog post,blogs entry; the blend mode its to complex for the first stage of the project

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,6 +6,7 @@ html(lang="en")
         include ./organisms/menu.pug
         include ./organisms/carousel.pug
         include ./templates/nav-desktop.pug
+        include ./pages/blog.pug
         include ./templates/post.pug
-        include ./templates/quickgalery.pug
+        include ./pages/art.pug
     script(src='./js/index.js', type='module')
