--- a/src/pug/templates/nav-desktop.pug
+++ b/src/pug/templates/nav-desktop.pug
@@ -5,6 +5,4 @@
         li
             a(href="#") BLOG
         li 
-            a(href="#") MÚSICA 
-        li 
-            a(href="#") AUDIOVISUAL
+            a(href="#") ART
