--- a/src/scss/organisms/_carousel.scss
+++ b/src/scss/organisms/_carousel.scss
@@ -17,6 +17,10 @@
 
     color: white;
 }
+
+.carousel__titles h1 {
+    text-shadow: 2px 2px 4px rgba(0,0,0, .8 );
+}
 .carousel img {
     width: auto;
     height: 100%;
