--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,4 +10,6 @@
 @use './templates/_quickgalery.scss';
 @use './organisms/_footer.scss';
 @use './templates/_nav-desktop.scss';
+@use './pages/_blog.scss';
+@use './pages/_art.scss';
 @use './breakpoints.scss';
