--- a/prd/style.css
+++ b/prd/style.css
@@ -27,16 +27,19 @@
   z-index: 200;
   width: 100%;
   height: 100px;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .header-logo {
   align-self: center;
+  letter-spacing: 3px;
 }
 
 .header-logo h1 {
   margin: 0;
   padding: 20px 0 20px 20px;
   color: white;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .header-menu {
@@ -79,6 +82,7 @@
 .nav {
   display: none;
   width: 100vw;
+  min-height: 100vh;
   height: -webkit-max-content;
   height: max-content;
   padding: 120px 0 0;
@@ -124,7 +128,7 @@
 }
 
 .info-about {
-  padding: 0 0 40px 0;
+  padding: 0 0 60px 0;
 }
 
 .info-about a {
@@ -189,6 +193,10 @@
   color: white;
 }
 
+.carousel__titles h1 {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+}
+
 .carousel img {
   width: auto;
   height: 100%;
@@ -205,7 +213,9 @@
 }
 
 .post {
+  width: 100%;
   padding: 40px;
+  margin: auto;
 }
 
 .post h1 {
@@ -226,7 +236,7 @@
 
 .quickgalery {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-template-rows: 1fr;
   gap: 2px;
   width: 100%;
@@ -254,8 +264,71 @@
   padding-bottom: 40px;
 }
 
-.nav-desktop {
+.nav-desk {
   display: none;
+}
+
+.blog {
+  width: 100%;
+  padding-top: 60px;
+}
+
+.blog-entries {
+  width: 100%;
+  padding: 40px;
+  margin: auto;
+}
+
+.blog-entry {
+  display: flex;
+  flex-direction: column;
+}
+
+.blog-entry-title {
+  padding-bottom: 40px;
+}
+
+.blog-entry-extract {
+  padding-bottom: 40px;
+}
+
+.blog-entry-more {
+  padding-bottom: 20px;
+  text-decoration: none;
+  color: black;
+}
+
+.art {
+  position: absolute;
+  width: 100%;
+  height: -webkit-max-content;
+  height: max-content;
+  background-color: black;
+}
+
+.nav-art {
+  position: sticky;
+  top: 100px;
+  width: 100%;
+  height: 50px;
+  padding: 15px;
+  z-index: 400;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.art-categories {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.art-categories li {
+  list-style: none;
+}
+
+.nav-art a {
+  text-decoration: none;
+  color: white;
 }
 
 @media only screen and (min-width: 768px) {
@@ -280,7 +353,8 @@
   }
 
   .carousel__titles {
-    left: -80px;
+    left: 0;
+    bottom: 100px;
     font-size: 40px;
   }
 }
@@ -308,5 +382,25 @@
     width: 70%;
     margin: auto;
     padding-top: 50px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .post, .blog-entries {
+    width: 75%;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .quickgalery {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .post, .blog-entries {
+    width: 60%;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .quickgalery {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
