--- a/src/pug/templates/post.pug
+++ b/src/pug/templates/post.pug
@@ -1,6 +1,6 @@
 article.blog-post
     .post        
-        h1 Titulo
+        h1 Blog Post
         h3 "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam exercitationem, laborum quo esse provident enim nemo necessitatibus praesentium quam? Quasi! "
         p Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, expedita ipsum commodi cupiditate magni placeat, laudantium repellendus itaque corrupti eligendi ea alias! Deserunt animi beatae hic quisquam laboriosam vero omnis.
         p Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, expedita ipsum commodi cupiditate magni placeat, laudantium repellendus itaque corrupti eligendi ea alias! Deserunt animi beatae hic quisquam laboriosam vero omnis.
