--- a/src/scss/organisms/_header.scss
+++ b/src/scss/organisms/_header.scss
@@ -6,16 +6,21 @@
     z-index: 200;
 
     width: 100%;
-    height: 100px
+    height: 100px;
+
+    background-color: rgba($color: #000000, $alpha: .1);
 }
 
 .header-logo {
     align-self: center;
+    
+    letter-spacing: 3px;
 }
 .header-logo h1 {
     margin: 0;
     padding: 20px 0 20px 20px;
     color: white;
+    text-shadow: 2px 2px 4px rgba(0,0,0, .2 );
 }
 .header-menu {
     justify-self: center;
