--- a/src/scss/templates/_quickgalery.scss
+++ b/src/scss/templates/_quickgalery.scss
@@ -1,6 +1,6 @@
 .quickgalery  {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     gap: 2px;
 
