web dev page, about page

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,6 +6,8 @@ html(lang="en")
         include ./organisms/menu.pug
         include ./organisms/carousel.pug
         include ./templates/nav-desktop.pug
+        include ./pages/about.pug
+        include ./pages/webdev.pug
         include ./pages/blog.pug
         include ./templates/post.pug
         include ./pages/art.pug
