--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,4 +12,6 @@
 @use './templates/_nav-desktop.scss';
 @use './pages/_blog.scss';
 @use './pages/_art.scss';
+@use './pages/webdev.scss';
+@use './pages/_about.scss';
 @use './breakpoints.scss';
