--- a/src/pug/organisms/menu.pug
+++ b/src/pug/organisms/menu.pug
@@ -2,6 +2,6 @@ nav.nav
     .c-nav
         .nav-category
             ul
-                each category in ['Blog', 'Web Dev', 'Musica', 'Audiovisual']
+                each category in ['Web Dev', 'Art', 'Blog']
                     a(href="#")= category 
         include ../molecules/main-info.pug
