rooting? pages html

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,10 +5,4 @@ html(lang="en")
         include ./organisms/header.pug
         include ./organisms/menu.pug
         include ./organisms/carousel.pug
-        include ./templates/nav-desktop.pug
-        include ./pages/about.pug
-        include ./pages/webdev.pug
-        include ./pages/blog.pug
-        include ./templates/post.pug
-        include ./pages/art.pug
-    script(src='./js/index.js', type='module')
+    script(src='./index.js', type='module')
