--- a/src/pug/organisms/carousel.pug
+++ b/src/pug/organisms/carousel.pug
@@ -1,5 +1,5 @@
 .carousel 
-    img(src="../arc/img/carousel/1.jpg", alt="")
+    img(src="./img/carousel/1.jpg", alt="")
     .carousel__titles
         span view category
         h1 Category 
