--- a/src/pug/organisms/menu.pug
+++ b/src/pug/organisms/menu.pug
@@ -2,6 +2,10 @@ nav.nav
     .c-nav
         .nav-category
             ul
-                each category in ['Web Dev', 'Art', 'Blog']
-                    a(href="#")= category 
+                li
+                    a(href="web-dev.html") Web Dev
+                li
+                    a(href="blog.html") Blog
+                li
+                    a(href="art.html") Art 
         include ../molecules/main-info.pug
