--- a/style.css
+++ b/style.css
@@ -6,15 +6,15 @@
 
 @font-face {
   font-family: oxygen;
-  src: url(../../../arc/font/Oxygen-Regular.ttf);
+  src: url(./font/Oxygen-Regular.ttf);
 }
 @font-face {
   font-family: oxygenLight;
-  src: url(../../../arc/font/Oxygen-Light.ttf);
+  src: url(./font/Oxygen-Light.ttf);
 }
 @font-face {
   font-family: oxygenBold;
-  src: url(../../../arc/font/Oxygen-Bold.ttf);
+  src: url(./font/Oxygen-Bold.ttf);
 }
 * {
   font-family: Oxygen;
