--- a/src/scss/_breakpoints.scss
+++ b/src/scss/_breakpoints.scss
@@ -7,19 +7,10 @@
         float: left;
     }
 }
-@media only screen and (min-width: 768px) {
-    .carousel {
-        width: 70%;
-        height: 85vh;
-        margin: auto;
-    }
-    .carousel span {
-        display: none;
-    }
-    .carousel__titles {
-        left: 0;
-        bottom: 100px;
-        font-size: 40px;
+@media only screen and (min-width: 670px) {
+    .carousel img {
+        width: 100%;
+        height: auto;
     }
 }
 @media only screen and (min-width: 768px) {
