--- a/src/scss/organisms/_carousel.scss
+++ b/src/scss/organisms/_carousel.scss
@@ -22,8 +22,11 @@
     text-shadow: 2px 2px 4px rgba(0,0,0, .8 );
 }
 .carousel img {
-    width: auto;
+    object-fit: contain;
     height: 100%;
+
+    /* 
+    width: auto;
     position: relative;
-    z-index: 1;
+    z-index: 1; */
 }
