--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@
   z-index: 200;
   width: 100%;
   height: 100px;
-  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .header-logo {
@@ -38,8 +37,8 @@
 .header-logo h1 {
   margin: 0;
   padding: 20px 0 20px 20px;
+  font-size: 18px;
   color: white;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .header-menu {
@@ -198,10 +197,12 @@
 }
 
 .carousel img {
-  width: auto;
+  object-fit: contain;
   height: 100%;
+  /* 
+  width: auto;
   position: relative;
-  z-index: 1;
+  z-index: 1; */
 }
 
 .blog-aside {
@@ -399,21 +400,10 @@
     float: left;
   }
 }
-@media only screen and (min-width: 768px) {
-  .carousel {
-    width: 70%;
-    height: 85vh;
-    margin: auto;
-  }
-
-  .carousel span {
-    display: none;
-  }
-
-  .carousel__titles {
-    left: 0;
-    bottom: 100px;
-    font-size: 40px;
+@media only screen and (min-width: 670px) {
+  .carousel img {
+    width: 100%;
+    height: auto;
   }
 }
 @media only screen and (min-width: 768px) {
