--- a/style.css
+++ b/style.css
@@ -1,23 +1,36 @@
+/* complete */
+@font-face {
+  font-family: ubuntu-regular;
+  src: url(./font/Ubuntu-Regular.ttf);
+}
+@font-face {
+  font-family: ubuntu-light;
+  src: url(./font/Ubuntu-Light.ttf);
+}
+@font-face {
+  font-family: ubuntu-medium;
+  src: url(./font/Ubuntu-Medium.ttf);
+}
+@font-face {
+  font-family: ubuntu-bold;
+  src: url(./font/Ubuntu-Bold.ttf);
+}
+* {
+  font-family: ubuntu-regular;
+}
+
+.section-title {
+  color: -var(font-color);
+}
+
+.text {
+  letter-spacing: 0.25px;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
-
-@font-face {
-  font-family: oxygen;
-  src: url(./font/Oxygen-Regular.ttf);
-}
-@font-face {
-  font-family: oxygenLight;
-  src: url(./font/Oxygen-Light.ttf);
-}
-@font-face {
-  font-family: oxygenBold;
-  src: url(./font/Oxygen-Bold.ttf);
-}
-* {
-  font-family: Oxygen;
 }
 
 .header {
