--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,5 @@
-@use './base/variables';
-@use './base/ui';
-@use './global/_normalice.scss';
+@use './base/_variables.scss';
+@use './base/_ui.scss';
 @use './organisms/_header.scss';
 @use './organisms/_menu.scss';
 @use './molecules/_main-info.scss';
