--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* complete */
 @font-face {
   font-family: ubuntu-regular;
   src: url(./font/Ubuntu-Regular.ttf);
@@ -17,20 +16,14 @@
 }
 * {
   font-family: ubuntu-regular;
-}
-
-.section-title {
-  color: -var(font-color);
-}
-
-.text {
-  letter-spacing: 0.25px;
-}
-
-* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+/* place holder */
+.text-blog, .text {
+  color: white;
 }
 
 .header {
