variables scopes correct @import, font weights complete"

--- a/src/scss/base/_ui.scss
+++ b/src/scss/base/_ui.scss
@@ -1,18 +1,135 @@
 * {
-    font-family: ubuntu-regular;
+    font-family: ubuntu;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-
-/* place holder */
+/* mixin para los breakpoitns */
+@mixin breakpoint($width) {
+    @media only screen and (min-width: $width) {
+        @content
+    }
+}
+%hero {
+    color: $color-font-white;
+    font-size: $font-size-hero;
+    letter-spacing: $letter-spacing-hero;
+    line-height: $line-height-hero;
+    font-weight: $font-weight-hero;
+}
+%h1 {
+    color: $color-font-white;
+    font-size: $font-size-h1;
+    letter-spacing: $letter-spacing-h1;
+    line-height: $line-height-h1;
+    font-weight: $font-weight-h1;
+}
+%h2 {
+    color: $color-font-white;
+    font-size: $font-size-h2;
+    letter-spacing: $letter-spacing-h2;
+    line-height: $line-height-h2;
+    font-weight: $font-weight-h2;
+}
+%h2-bold {
+    @extend %h2;
+    font-weight: $font-weight-h2-bold;
+}
+%h3 {
+    color: $color-font-white;
+    font-size: $font-size-h3;
+    letter-spacing: $letter-spacing-h3;
+    line-height: $line-height-h3;
+    font-weight: $font-weight-h3;
+}
+%h3-bold {
+    @extend %h3;
+    font-weight: $font-weight-h3-bold;
+}
+%h4 {
+    color: $color-font-white;
+    font-size: $font-size-h4;
+    letter-spacing: $letter-spacing-h4;
+    line-height: $line-height-h4;
+    font-weight: $font-weight-h4;
+}
+%h4-bold {
+    @extend %h4;
+    font-weight: $font-weight-h4-bold;
+}
+%h5 {
+    color: $color-font-white;
+    font-size: $font-size-h5;
+    letter-spacing: $letter-spacing-h5;
+    line-height: $line-height-h5;
+    font-weight: $font-weight-h5;
+}
+%h6 {
+    color: $color-font-white;
+    font-size: $font-size-h6;
+    letter-spacing: $letter-spacing-h6;
+    line-height: $line-height-h6;
+    font-weight: $font-weight-h6;
+}
+%sub1 {
+    color: $color-font-white;
+    font-size: $font-size-sub1;
+    letter-spacing: $letter-spacing-sub1;
+    line-height: $line-height-sub1;
+    font-weight: $font-weight-sub1;
+}
+%sub1-desktop {
+    color: $color-font-white;
+    font-size: $font-size-sub1-desktop;
+    letter-spacing: $letter-spacing-sub1-desktop;
+    line-height: $line-height-sub1-desktop;
+    font-weight: $font-weight-sub1-desktop;
+}
 %body1 {
-    color: white;
+    color: $color-font-white;
+    font-size: $font-size-body1;
+    letter-spacing: $letter-spacing-body1;
+    line-height: $line-height-body1;
+    font-weight: $font-weight-body1;
+}
+%body2 {
+    color: $color-font-white;
+    font-size: $font-size-body2;
+    letter-spacing: $letter-spacing-body2;
+    line-height: $line-height-body2;
+    font-weight: $font-weight-body2;
+}
+%body-desktop {
+    color: $color-font-white;
+    font-size: $font-size-body-desktop;
+    letter-spacing: $letter-spacing-body-desktop;
+    line-height: $line-height-body-desktop;
+    font-weight: $font-weight-body-desktop;
+}
+%button {
+    color: $color-font-white;
+    font-size: $font-size-button;
+    letter-spacing: $letter-spacing-button;
+    line-height: $line-height-button;
+    font-weight: $font-weight-button;
+}
+%button-desktop {
+    color: $color-font-white;
+    font-size: $font-size-button-desktop;
+    letter-spacing: $letter-spacing-button-desktop;
+    line-height: $line-height-button-desktop;
+    font-weight: $font-weight-button-desktop;
 }
 
-.text {
-    @extend %body1;
+h1 {
+    @extend %hero;
 }
-.text-blog {
-    @extend %body1;
+h1{
+    font-weight: $medium;
+}
+h1 {
+    font-weight: $regular;
+}
+h1 {
+    font-weight: $lighter;
 }
