--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,15 +1,15 @@
-@use './base/_variables.scss';
-@use './base/_ui.scss';
-@use './organisms/_header.scss';
-@use './organisms/_menu.scss';
-@use './molecules/_main-info.scss';
-@use './organisms/_carousel.scss';
-@use './templates/_posts.scss';
-@use './templates/_quickgalery.scss';
-@use './organisms/_footer.scss';
-@use './templates/_nav-desktop.scss';
-@use './pages/_blog.scss';
-@use './pages/_art.scss';
-@use './pages/webdev.scss';
-@use './pages/_about.scss';
-@use './breakpoints.scss';
+@import './base/_variables';
+@import './base/_ui';
+@import './organisms/_header';
+@import './organisms/_menu';
+@import './molecules/_main-info';
+@import './organisms/_carousel';
+@import './templates/_posts';
+@import './templates/_quickgalery';
+@import './organisms/_footer';
+@import './templates/_nav-desktop';
+@import './pages/_blog';
+@import './pages/_art';
+@import './pages/webdev';
+@import './pages/_about';
+@import './breakpoints'; 
