--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,8 +1,7 @@
 doctype html
 html(lang="en")
-    include ./global/head.pug 
-    body 
-        include ./organisms/header.pug
-        include ./organisms/menu.pug
-        include ./organisms/carousel.pug
+    include ./base/head.pug 
+    body
+        header
+            include ./nav.pug
     script(src='./index.js', type='module')
