refactoring html / pug structure

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,8 @@
 @import './base/_variables';
 @import './base/_ui';
-@import './organisms/_header';
+@import '_nav';
+
+/* @import './organisms/_header';
 @import './organisms/_menu';
 @import './molecules/_main-info';
 @import './organisms/_carousel';
@@ -12,4 +14,4 @@
 @import './pages/_art';
 @import './pages/webdev';
 @import './pages/_about';
-@import './breakpoints'; 
+@import './breakpoints';  */
