--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,7 +1,3 @@
-doctype html
-html(lang="en")
-    include ./base/head.pug 
-    body
-        header
-            include ./nav.pug
-    script(src='./index.js', type='module')
+extend ./component/index-template.pug
+block content
+    
