init maquetation, nav

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -6,6 +6,8 @@ $color-white: #ffffff;
 
 $color-font-white: $color-white;
 
+$height-nav: 72px;
+
 $margin-grid-mobile: 16px;
 $margin-grid-tablet: 24px;
 $margin-grid-desktop: 32px;
