--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import './base/_variables';
 @import './base/_ui';
-@import '_nav';
+@import 'component/_nav';
+@import 'component/main';
 
 /* @import './organisms/_header';
 @import './organisms/_menu';
