grid interpolation, top nav bar

--- a/src/pug/component/main.pug
+++ b/src/pug/component/main.pug
@@ -1,24 +1,3 @@
-main.main 
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
-
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
-
-    h1 hoooolaaaaaaa
-
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
-    h1 hoooolaaaaaaa
+main.main
+section.skills 
+section.projects
