--- a/src/scss/base/_ui.scss
+++ b/src/scss/base/_ui.scss
@@ -4,6 +4,11 @@
     padding: 0;
     margin: 0;
 }
+%template-columns-mobile-1 {
+    grid-template-columns: repeat(4, 4fr);
+    padding-inline: $margin-grid-mobile;
+    column-gap: $gutter-grid-mobile;
+}
 @mixin breakpoint($width) {
     @media only screen and (min-width: $width) {
         @content;
