--- a/style.css
+++ b/style.css
@@ -25,6 +25,12 @@
   margin: 0;
 }
 
+.main, .nav {
+  grid-template-columns: repeat(4, 4fr);
+  padding-inline: 16px;
+  column-gap: 32px;
+}
+
 /* --- FALTAN PLACEHOLDERS --- */
 /* 
 .selector {
@@ -39,13 +45,10 @@
 */
 .nav {
   display: grid;
-  grid-template-columns: repeat(4, 4fr);
   position: fixed;
   top: 0;
   width: 100%;
   height: 72px;
-  padding: 0 16px;
-  column-gap: 32px;
   background: rgba(0, 0, 0, 0);
 }
 @media only screen and (min-width: 768px) {
@@ -87,10 +90,16 @@
 }
 
 .main {
+  display: grid;
   width: 100%;
   height: 100vh;
-  padding-top: 71px;
+  padding-top: 72px;
   background-color: #1d1d1d;
+}
+
+.skills {
+  height: 100vh;
+  background-color: palevioletred;
 }
 
 /* @import './organisms/_header';
