-first structure of home page

--- a/src/pug/component/main.pug
+++ b/src/pug/component/main.pug
@@ -1,3 +1,17 @@
 main.main
-section.skills 
-section.projects
+    .main-subtitle
+        h1 Front-End Developer.
+    .main-title
+        h1 Ariel Soto
+section.section-main.section-skill
+    h1.section-main-title Skills
+    p.section-main-text
+        | I'm interesting in the cliente side. Front End is what I'm really into. I like design interfaces. 
+    h2.section-main-subtitle Technologies
+    .skills-container
+section.section-main.section-project
+    h1.section-main-title Projects
+    .projects-container
+        .card-project
+            .card-project--image
+            h1.card-project--title
