--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -8,9 +8,10 @@ $color-font-white: $color-white;
 
 $height-nav: 72px;
 
-$margin-grid-mobile: 16px;
-$margin-grid-tablet: 24px;
-$margin-grid-desktop: 32px;
+/* CHECK? */
+$margin-grid-mobile: 32px;
+$margin-grid-tablet: 48px;
+$margin-grid-desktop: 64px;
 
 $margin-post-mobile: 64px;
 
