--- a/src/scss/component/_main.scss
+++ b/src/scss/component/_main.scss
@@ -1,12 +1,55 @@
 .main {
     display: grid;
     @extend %template-columns-mobile-1;
-    width: 100%;
-    height: 100vh;
-    padding-top: $height-nav;
+    @extend %template-rows-mobile-hero;
+    position: relative;
+    inline-size: 100%;
+    block-size: 100vh;
+
     background-color: $color-dark;
 }
-.skills {
-    height: 100vh;
-    background-color: palevioletred
+.main-subtitle {
+    grid-column: 1 / 3;
+    grid-row: 2 / 4 ;
+}
+.main-subtitle h1 {
+    @extend %hero-subtitle;
+}
+
+.main-title {
+    grid-column: 1 / 4;
+    grid-row: 5 / 8 ;
+}
+.main-title h1 {
+    @extend %hero;
+    color: $color-font-white
+}
+.section-main {
+    display: flex;
+    flex-direction: column;
+
+    inline-size: 100%;
+    block-size: 100vh;
+    padding-block-start: $height-nav;
+    padding-inline: $margin-grid-mobile;
+
+    background-color: $color-dark;
+}
+.section-main-title {
+    @extend %section-title;
+    margin-block-end: $spacing-medium;
+}
+.section-main-text {
+    inline-size: 250px;
+    align-self: center;
+    margin-block-end: $spacing-big;
+}
+.section-main-subtitle {
+    @extend %section-subtitle;
+    margin-block-end: $spacing-medium;
+}
+.skills-container {
+    inline-size: 100%;
+    block-size: 100%;
+    background-color: grey;
 }
