--- a/src/scss/component/_nav.scss
+++ b/src/scss/component/_nav.scss
@@ -2,10 +2,11 @@
     display: grid;
     @extend %template-columns-mobile-1;
     position: fixed;
+    z-index: 100;
     top: 0;
     
-    width: 100%;
-    height: $height-nav;
+    inline-size: 100%;
+    block-size: $height-nav;
     background: rgba(0, 0, 0, 0);
     @include breakpoint($breakpoint-tablet) {
         grid-template-columns: repeat(4, 4fr);
