--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* CHECK? */
 @font-face {
   font-family: ubuntu;
   src: url(./font/Ubuntu-Regular.ttf);
@@ -23,15 +24,96 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  color: #ffffff;
 }
 
 .main, .nav {
   grid-template-columns: repeat(4, 4fr);
-  padding-inline: 16px;
+  padding-inline: 32px;
   column-gap: 32px;
 }
 
+.main {
+  grid-template-rows: repeat(7, 1fr);
+  padding-block-start: 72px;
+  row-gap: 32px;
+}
+
 /* --- FALTAN PLACEHOLDERS --- */
+.main-title h1 {
+  color: #ffffff;
+  font-size: 60px;
+  letter-spacing: -0.5px;
+  line-height: 84px;
+  font-weight: 100;
+  font-weight: 600;
+}
+@media only screen and (min-width: 768px) {
+  .main-title h1 {
+    color: #ffffff;
+    font-size: 98px;
+    letter-spacing: -1.5px;
+    line-height: 137.2px;
+    font-weight: 100;
+    font-weight: 600;
+  }
+}
+
+.main-subtitle h1 {
+  color: #ffffff;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: 33.6px;
+  font-weight: 400;
+  font-weight: 600;
+}
+@media only screen and (min-width: 768px) {
+  .main-subtitle h1 {
+    color: #ffffff;
+    font-size: 48px;
+    letter-spacing: 0;
+    line-height: 67.2px;
+    font-weight: 400;
+    font-weight: 600;
+  }
+}
+
+.section-main-title {
+  color: #ffffff;
+  font-size: 36px;
+  letter-spacing: 0.25px;
+  line-height: 50.4px;
+  font-weight: 400;
+  font-weight: 600;
+}
+@media only screen and (min-width: 768px) {
+  .section-main-title {
+    color: #ffffff;
+    font-size: 60px;
+    letter-spacing: -0.5px;
+    line-height: 84px;
+    font-weight: 100;
+    font-weight: 600;
+  }
+}
+
+.section-main-subtitle {
+  color: #ffffff;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: 33.6px;
+  font-weight: 400;
+}
+@media only screen and (min-width: 768px) {
+  .section-main-subtitle {
+    color: #ffffff;
+    font-size: 48px;
+    letter-spacing: 0;
+    line-height: 67.2px;
+    font-weight: 400;
+  }
+}
+
 /* 
 .selector {
     %placeholder {
@@ -46,15 +128,16 @@
 .nav {
   display: grid;
   position: fixed;
+  z-index: 100;
   top: 0;
-  width: 100%;
-  height: 72px;
+  inline-size: 100%;
+  block-size: 72px;
   background: rgba(0, 0, 0, 0);
 }
 @media only screen and (min-width: 768px) {
   .nav {
     grid-template-columns: repeat(4, 4fr);
-    margin: 0 24px;
+    margin: 0 48px;
     column-gap: 32px;
   }
 }
@@ -91,15 +174,54 @@
 
 .main {
   display: grid;
-  width: 100%;
-  height: 100vh;
-  padding-top: 72px;
+  position: relative;
+  inline-size: 100%;
+  block-size: 100vh;
   background-color: #1d1d1d;
 }
 
-.skills {
-  height: 100vh;
-  background-color: palevioletred;
+.main-subtitle {
+  grid-column: 1/3;
+  grid-row: 2/4;
+}
+
+.main-title {
+  grid-column: 1/4;
+  grid-row: 5/8;
+}
+
+.main-title h1 {
+  color: #ffffff;
+}
+
+.section-main {
+  display: flex;
+  flex-direction: column;
+  inline-size: 100%;
+  block-size: 100vh;
+  padding-block-start: 72px;
+  padding-inline: 32px;
+  background-color: #1d1d1d;
+}
+
+.section-main-title {
+  margin-block-end: 24px;
+}
+
+.section-main-text {
+  inline-size: 250px;
+  align-self: center;
+  margin-block-end: 48px;
+}
+
+.section-main-subtitle {
+  margin-block-end: 24px;
+}
+
+.skills-container {
+  inline-size: 100%;
+  block-size: 100%;
+  background-color: grey;
 }
 
 /* @import './organisms/_header';
