refactoring base variables with @use

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,18 +1,3 @@
-@import './base/_variables';
-@import './base/_ui';
-@import 'component/_nav';
-@import 'component/main';
-
-/* @import './organisms/_header';
-@import './organisms/_menu';
-@import './molecules/_main-info';
-@import './organisms/_carousel';
-@import './templates/_posts';
-@import './templates/_quickgalery';
-@import './organisms/_footer';
-@import './templates/_nav-desktop';
-@import './pages/_blog';
-@import './pages/_art';
-@import './pages/webdev';
-@import './pages/_about';
-@import './breakpoints';  */
+@import './base/_var';
+/* @import 'component/_nav';
+@import 'component/main'; */
