--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,3 @@
-@import './base/_var';
-/* @import 'component/_nav';
-@import 'component/main'; */
+@import './base/var';
+@import 'component/nav';
+@import 'component/main'; 
