--- a/src/scss/component/_main.scss
+++ b/src/scss/component/_main.scss
@@ -1,3 +1,4 @@
+@use './base/var';
 .main {
     display: grid;
     @extend %template-columns-mobile-1;
@@ -6,7 +7,7 @@
     inline-size: 100%;
     block-size: 100vh;
 
-    background-color: $color-dark;
+    background-color: var.$color-dark;
 }
 .main-subtitle {
     grid-column: 1 / 3;
@@ -22,7 +23,7 @@
 }
 .main-title h1 {
     @extend %hero;
-    color: $color-font-white
+    color: var.$color-font-white
 }
 .section-main {
     display: flex;
@@ -30,23 +31,23 @@
 
     inline-size: 100%;
     block-size: 100vh;
-    padding-block-start: $height-nav;
-    padding-inline: $margin-grid-mobile;
+    padding-block-start: var.$height-nav;
+    padding-inline: var.$margin-grid-mobile;
 
-    background-color: $color-dark;
+    background-color: var.$color-dark;
 }
 .section-main-title {
     @extend %section-title;
-    margin-block-end: $spacing-medium;
+    margin-block-end: var.$spacing-medium;
 }
 .section-main-text {
     inline-size: 250px;
     align-self: center;
-    margin-block-end: $spacing-big;
+    margin-block-end: var.$spacing-big;
 }
 .section-main-subtitle {
     @extend %section-subtitle;
-    margin-block-end: $spacing-medium;
+    margin-block-end: var.$spacing-medium;
 }
 .skills-container {
     inline-size: 100%;
