--- a/style.css
+++ b/style.css
@@ -1,3 +1,77 @@
+.main-title h1 {
+  color: #ffffff;
+  font-size: 60px;
+  letter-spacing: -0.5px;
+  line-height: 84px;
+  font-weight: 100;
+  font-weight: 600;
+}
+
+@media only screen and (min-width: 768px) {
+  .main-title h1 {
+    color: #ffffff;
+    font-size: 98px;
+    letter-spacing: -1.5px;
+    line-height: 137.2px;
+    font-weight: 100;
+    font-weight: 600;
+  }
+}
+.main-subtitle h1 {
+  color: #ffffff;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: 33.6px;
+  font-weight: 400;
+  font-weight: 600;
+}
+
+@media only screen and (min-width: 768px) {
+  .main-subtitle h1 {
+    color: #ffffff;
+    font-size: 48px;
+    letter-spacing: 0;
+    line-height: 67.2px;
+    font-weight: 400;
+    font-weight: 600;
+  }
+}
+.section-main-title {
+  color: #ffffff;
+  font-size: 36px;
+  letter-spacing: 0.25px;
+  line-height: 50.4px;
+  font-weight: 400;
+  font-weight: 600;
+}
+
+@media only screen and (min-width: 768px) {
+  .section-main-title {
+    color: #ffffff;
+    font-size: 60px;
+    letter-spacing: -0.5px;
+    line-height: 84px;
+    font-weight: 100;
+    font-weight: 600;
+  }
+}
+.section-main-subtitle {
+  color: #ffffff;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: 33.6px;
+  font-weight: 400;
+}
+
+@media only screen and (min-width: 768px) {
+  .section-main-subtitle {
+    color: #ffffff;
+    font-size: 48px;
+    letter-spacing: 0;
+    line-height: 67.2px;
+    font-weight: 400;
+  }
+}
 @font-face {
   font-family: ubuntu;
   src: url(./font/Ubuntu-Regular.ttf);
@@ -18,6 +92,18 @@
   src: url(./font/Ubuntu-Bold.ttf);
   font-weight: 600;
 }
+.main, .nav {
+  grid-template-columns: repeat(4, 4fr);
+  padding-inline: 32px;
+  column-gap: 32px;
+}
+
+.main {
+  grid-template-rows: repeat(7, 1fr);
+  padding-block-start: 72px;
+  row-gap: 32px;
+}
+
 * {
   font-family: ubuntu;
   box-sizing: border-box;
@@ -26,5 +112,329 @@
   color: #ffffff;
 }
 
-/* @import 'component/_nav';
-@import 'component/main'; */
+.main-title h1 {
+  color: #ffffff;
+  font-size: 60px;
+  letter-spacing: -0.5px;
+  line-height: 84px;
+  font-weight: 100;
+  font-weight: 600;
+}
+
+@media only screen and (min-width: 768px) {
+  .main-title h1 {
+    color: #ffffff;
+    font-size: 98px;
+    letter-spacing: -1.5px;
+    line-height: 137.2px;
+    font-weight: 100;
+    font-weight: 600;
+  }
+}
+.main-subtitle h1 {
+  color: #ffffff;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: 33.6px;
+  font-weight: 400;
+  font-weight: 600;
+}
+
+@media only screen and (min-width: 768px) {
+  .main-subtitle h1 {
+    color: #ffffff;
+    font-size: 48px;
+    letter-spacing: 0;
+    line-height: 67.2px;
+    font-weight: 400;
+    font-weight: 600;
+  }
+}
+.section-main-title {
+  color: #ffffff;
+  font-size: 36px;
+  letter-spacing: 0.25px;
+  line-height: 50.4px;
+  font-weight: 400;
+  font-weight: 600;
+}
+
+@media only screen and (min-width: 768px) {
+  .section-main-title {
+    color: #ffffff;
+    font-size: 60px;
+    letter-spacing: -0.5px;
+    line-height: 84px;
+    font-weight: 100;
+    font-weight: 600;
+  }
+}
+.section-main-subtitle {
+  color: #ffffff;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: 33.6px;
+  font-weight: 400;
+}
+
+@media only screen and (min-width: 768px) {
+  .section-main-subtitle {
+    color: #ffffff;
+    font-size: 48px;
+    letter-spacing: 0;
+    line-height: 67.2px;
+    font-weight: 400;
+  }
+}
+@font-face {
+  font-family: ubuntu;
+  src: url(./font/Ubuntu-Regular.ttf);
+  font-weight: 400;
+}
+@font-face {
+  font-family: ubuntu;
+  src: url(./font/Ubuntu-Light.ttf);
+  font-weight: 100;
+}
+@font-face {
+  font-family: ubuntu;
+  src: url(./font/Ubuntu-Medium.ttf);
+  font-weight: 500;
+}
+@font-face {
+  font-family: ubuntu;
+  src: url(./font/Ubuntu-Bold.ttf);
+  font-weight: 600;
+}
+.main, .nav {
+  grid-template-columns: repeat(4, 4fr);
+  padding-inline: 32px;
+  column-gap: 32px;
+}
+
+.main {
+  grid-template-rows: repeat(7, 1fr);
+  padding-block-start: 72px;
+  row-gap: 32px;
+}
+
+* {
+  font-family: ubuntu;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  color: #ffffff;
+}
+
+.nav {
+  display: grid;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  inline-size: 100%;
+  block-size: 72px;
+  background: rgba(0, 0, 0, 0);
+}
+@media only screen and (min-width: 768px) {
+  .nav {
+    grid-template-columns: repeat(4, 4fr);
+    margin: 0 48px;
+    column-gap: 32px;
+  }
+}
+
+.nav-icon {
+  grid-column: 1/2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+}
+
+.nav-icon span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 48px;
+  height: 48px;
+  text-align: center;
+  font-size: 24px;
+  text-transform: uppercase;
+}
+
+.nav-menu {
+  grid-column: 4/5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-menu span {
+  color: #ffffff;
+}
+
+.main-title h1 {
+  color: #ffffff;
+  font-size: 60px;
+  letter-spacing: -0.5px;
+  line-height: 84px;
+  font-weight: 100;
+  font-weight: 600;
+}
+
+@media only screen and (min-width: 768px) {
+  .main-title h1 {
+    color: #ffffff;
+    font-size: 98px;
+    letter-spacing: -1.5px;
+    line-height: 137.2px;
+    font-weight: 100;
+    font-weight: 600;
+  }
+}
+.main-subtitle h1 {
+  color: #ffffff;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: 33.6px;
+  font-weight: 400;
+  font-weight: 600;
+}
+
+@media only screen and (min-width: 768px) {
+  .main-subtitle h1 {
+    color: #ffffff;
+    font-size: 48px;
+    letter-spacing: 0;
+    line-height: 67.2px;
+    font-weight: 400;
+    font-weight: 600;
+  }
+}
+.section-main-title {
+  color: #ffffff;
+  font-size: 36px;
+  letter-spacing: 0.25px;
+  line-height: 50.4px;
+  font-weight: 400;
+  font-weight: 600;
+}
+
+@media only screen and (min-width: 768px) {
+  .section-main-title {
+    color: #ffffff;
+    font-size: 60px;
+    letter-spacing: -0.5px;
+    line-height: 84px;
+    font-weight: 100;
+    font-weight: 600;
+  }
+}
+.section-main-subtitle {
+  color: #ffffff;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: 33.6px;
+  font-weight: 400;
+}
+
+@media only screen and (min-width: 768px) {
+  .section-main-subtitle {
+    color: #ffffff;
+    font-size: 48px;
+    letter-spacing: 0;
+    line-height: 67.2px;
+    font-weight: 400;
+  }
+}
+@font-face {
+  font-family: ubuntu;
+  src: url(./font/Ubuntu-Regular.ttf);
+  font-weight: 400;
+}
+@font-face {
+  font-family: ubuntu;
+  src: url(./font/Ubuntu-Light.ttf);
+  font-weight: 100;
+}
+@font-face {
+  font-family: ubuntu;
+  src: url(./font/Ubuntu-Medium.ttf);
+  font-weight: 500;
+}
+@font-face {
+  font-family: ubuntu;
+  src: url(./font/Ubuntu-Bold.ttf);
+  font-weight: 600;
+}
+.nav, .main {
+  grid-template-columns: repeat(4, 4fr);
+  padding-inline: 32px;
+  column-gap: 32px;
+}
+
+.main {
+  grid-template-rows: repeat(7, 1fr);
+  padding-block-start: 72px;
+  row-gap: 32px;
+}
+
+* {
+  font-family: ubuntu;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  color: #ffffff;
+}
+
+.main {
+  display: grid;
+  position: relative;
+  inline-size: 100%;
+  block-size: 100vh;
+  background-color: #1d1d1d;
+}
+
+.main-subtitle {
+  grid-column: 1/3;
+  grid-row: 2/4;
+}
+
+.main-title {
+  grid-column: 1/4;
+  grid-row: 5/8;
+}
+
+.main-title h1 {
+  color: #ffffff;
+}
+
+.section-main {
+  display: flex;
+  flex-direction: column;
+  inline-size: 100%;
+  block-size: 100vh;
+  padding-block-start: 72px;
+  padding-inline: 32px;
+  background-color: #1d1d1d;
+}
+
+.section-main-title {
+  margin-block-end: 24px;
+}
+
+.section-main-text {
+  inline-size: 250px;
+  align-self: center;
+  margin-block-end: 48px;
+}
+
+.section-main-subtitle {
+  margin-block-end: 24px;
+}
+
+.skills-container {
+  inline-size: 100%;
+  block-size: 100%;
+  background-color: grey;
+}
